[package]
name = "colour-escape-redundancy-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Scheffe <matt@dataheck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
flate2 = { version = "1.0" }